--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-echarts": "^3.0.2",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.7"
   },
