--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.9",
+    "apollo-client": "^2.2.5",
+    "apollo-link": "^1.1.0",
+    "apollo-link-http": "^1.3.3",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.7.3",
     "vue": "^2.5.2",
+    "vue-apollo": "^3.0.0-beta.4",
     "vue-echarts": "^3.0.2",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.7"
