--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-apollo": "^3.0.0-beta.4",
     "vue-echarts": "^3.0.2",
     "vue-router": "^3.0.1",
+    "vue-tweet-embed": "^2.1.1",
     "vuetify": "^1.0.1"
   },
   "devDependencies": {
